# Ubuntu

2024년/1학기/i2c_Arduino/i2c_encoder/: i2c_encoder.ino
2024년/1학기/i2c_Arduino/i2c_encoder/car_control/: CMakeLists.txt
2024년/1학기/i2c_Arduino/i2c_encoder/car_control/launch/: car_control.launch
2024년/1학기/i2c_Arduino/i2c_encoder/car_control/src/: car_control_node.cpp
2024년/1학기/i2c_Arduino/i2c_encoder/car_control/teleop/scripts/: teleop.py
Car_control_i2c/: CMakeLists.txt  package.xml
Car_control_i2c/i2c/: i2c.ino
Car_control_i2c/launch/: car_control.launch
Car_control_i2c/src/: car_control_node.cpp
thread.c/: Makefile
thread.c/2024년/: operator_node.cpp
thread.c/2024년/20240103/: gugudan.c  gugudanthread
thread.c/2024년/20240105/homework1/: Makefile  test1  test1.c
thread.c/2024년/20240105/homework2/: Makefile  test2  test2.c
thread.c/2024년/Lider/laser_scan/: CMakeLists.txt  package.xml
thread.c/2024년/Lider/laser_scan/src/: laser_scan_node.cpp
thread.c/2024년/Pioneer_control/: CMakeLists.txt
thread.c/2024년/Pioneer_control/launch/: pioneer_control.launch
thread.c/2024년/Pioneer_control/src/: pioneer_control.cpp
thread.c/2024년/Poineer/: CMakeLists.txt  package.xml
thread.c/2024년/Poineer/src/: Poineer_node.cpp  Poineer_video.webm
thread.c/2024년/ROS pakcage2/: operator_node.cpp
thread.c/2024년/ROS pakcage2/src/: operator_node.cpp
thread.c/2024년/aeb_control/: CMakeLists.txt  aeb_control.cpp  package.xml
thread.c/2024년/aeb_control/src/: aeb_control.cpp  aeb_control_node.cpp
thread.c/2024년/cmd_vel_mux/: CMakeLists.txt
thread.c/2024년/cmd_vel_mux/launch/: cmd.launch
thread.c/2024년/kukudan/: CMakeLists.txt  package.xml
thread.c/2024년/line_control/: CMakeLists.txt  package.xml
thread.c/2024년/line_control/src/: line_control_node.cpp
thread.c/2024년/move_waypoint/: CMakeLists.txt  package.xml
thread.c/2024년/move_waypoint/launch/: waypoint.launch
thread.c/2024년/move_waypoint/src/: move_waypoint_node.cpp
thread.c/2024년/my_second_pkg/: CMakeLists.txt
thread.c/2024년/turtle_pose/: package.xml
thread.c/2024년/turtle_pose/src/: turtle_pose_node.cpp
thread.c/2024년/wall_following/: CMakeLists.txt
thread.c/2024년/wall_following/src/: wall_following_node.cpp
thread.c/2024년/yaw_control/: CMakeLists.txt
thread.c/2024년/yaw_control/src/: yaw_control_node.cpp
